[project]
name = "llm_tmux_fragments"
version = "0.1.0"
description = "LLM fragment & template loaders for tmux scrollback and helpful prompt templates"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "kabilan108", email = "tonykabilanokeke@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["llm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/kabilan108/llm-tmux"
Issues = "https://github.com/kabilan108/llm-tmux/issues"

[project.entry-points.llm]
tmux_fragments = "llm_tmux_fragments"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }]

[tool.ruff]
target-version = "py313"
line-length = 100
lint.select = ["E", "F", "W", "B", "I", "UP"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]
